--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -5,8 +5,7 @@
   "projects": "المشاريع",
   "testimonials": "الشهادات",
   "contactMe": "تواصل معي",
-  "firstName": "محمود",
-  "lastName": "ابوالمجد",
+  "name": "محمود ابوالمجد",
   "resume": "Resume/CV",
   "linkedIn": "LinkedIn",
   "github": "Github",
