--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -5,8 +5,7 @@
   "career": "Career",
   "testimonials": "Testimonials",
   "contactMe": "Contact Me",
-  "firstName": "Mahmoud",
-  "lastName": "Abulmajd",
+  "name": "Mahmoud Abulmajd",
   "resume": "Resume/CV",
   "linkedIn": "LinkedIn",
   "github": "Github",
