--- a/docs/assets/assets/translations/ar.json
+++ b/docs/assets/assets/translations/ar.json
@@ -1,12 +1,13 @@
 {
   "services": "خدماتي",
-  "myWork": "مشاريعي",
   "career": "الوظائف",
+  "aboutMe": "عني",
+  "projects": "المشاريع",
   "testimonials": "الشهادات",
-  "education": "التعليم",
   "contactMe": "تواصل معي",
-  "firstName": "محمود",
-  "lastName": "ابوالمجد",
-  "description": "مطور فلاتر بما يزيد عن سنتان من الخبرة في العمل كمطور منفرد او جزء من شركة. عندي شغف تجاه المشاريع المميزة واحب دائما العمل علي الواجهات التي تفرض تحدي.",
-  "myNameIs": "― اسمي"
+  "name": "محمود ابوالمجد",
+  "resume": "Resume/CV",
+  "linkedIn": "LinkedIn",
+  "github": "Github",
+  "description": "مطور فلاتر بما يزيد عن سنتان من الخبرة في العمل كمطور منفرد او جزء من شركة. عندي شغف تجاه المشاريع المميزة واحب دائما العمل علي الواجهات التي تفرض تحدي."
 }
