--- a/docs/assets/assets/translations/en.json
+++ b/docs/assets/assets/translations/en.json
@@ -1,12 +1,13 @@
 {
   "services": "Services",
-  "myWork": "My Work",
+  "aboutMe": "About Me",
+  "projects": "Projects",
   "career": "Career",
   "testimonials": "Testimonials",
-  "education": "Education",
   "contactMe": "Contact Me",
-  "firstName": "Mahmoud",
-  "lastName": "Abulmajd",
-  "description": "Creative front-end flutter developer with +2 collective years of experience in freelancing, companies, and startups. Always Passionate about interesting projects and attractive or challenging UI/UX.",
-  "myNameIs": "─ MY NAME IS"
+  "name": "Mahmoud Abulmajd",
+  "resume": "Resume/CV",
+  "linkedIn": "LinkedIn",
+  "github": "Github",
+  "description": "Creative front-end flutter developer with +2 collective years of experience in freelancing, companies, and startups. Always Passionate about interesting projects and attractive or challenging UI/UX."
 }
