Final update to header

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -9,5 +9,7 @@
   "resume": "Resume/CV",
   "linkedIn": "LinkedIn",
   "github": "Github",
+  "letsGetStarted": "لنبدأ!",
+  "workedWith": "عملت بـ",
   "description": "مطور فلاتر بما يزيد عن سنتان من الخبرة في العمل كمطور منفرد او جزء من شركة. عندي شغف تجاه المشاريع المميزة واحب دائما العمل علي الواجهات التي تفرض تحدي."
 }
