--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,12 +1,17 @@
 {
   "en": "English",
   "ar": "عربي",
+  "myAbout": "لوريم إيبسوم دولور سيت أميت كونسيكتيتور. تريستيك أميت سيد ماسا نيب لكتوس نيتوس إن. أليكيت دونك موربي كونفاليس بريتيوم. توربيس تمبوس فارترا.",
+  "myIntro": "لوريم إيبسوم دولور سيت أميت كونسيكتيتور. تريستيك أميت سيد ماسا نيب لكتوس نيتوس إن. أليكيت دونك موربي كونفاليس بريتيوم. توربيس تمبوس فارترا.",
+  "myName": "محمود أبوالمجد",
   "languages": "اللغات",
   "aboutMe": "عنّي",
   "services": "خدماتي",
   "testimonials": "الشهادات",
   "projects": "المشاريع",
   "contactMe": "اتصل بي",
-  "name": "الإسم",
-  "downloadCV": "تحميل CV"
+  "downloadCV": "تحميل CV",
+  "hiIam": "مرحبا, انا",
+  "jobTitle": "مطور فلاتر",
+  "hireMe": "وظفني"
 }
