WIP Services view

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -13,5 +13,12 @@
   "downloadCV": "تحميل CV",
   "hiIam": "مرحبا, انا",
   "jobTitle": "مطور فلاتر",
-  "hireMe": "وظفني"
+  "hireMe": "وظفني",
+  "mobileApp": "تطبيقات الهاتف",
+  "mobileAppDesc": "لوريم إيبسوم دولور سيت أميت كونسيكتيتور. تريستيك أميت سيد ماسا نيب لكتوس نيتوس إن. أليكيت دونك موربي كونفاليس بريتيوم. توربيس تمبوس فارترا.",
+  "maintenance": "الصيانة",
+  "maintenanceDesc": "لوريم إيبسوم دولور سيت أميت كونسيكتيتور. تريستيك أميت سيد ماسا نيب لكتوس نيتوس إن. أليكيت دونك موربي كونفاليس بريتيوم. توربيس تمبوس فارترا.",
+  "webApp": "تطبيقات الويب",
+  "webAppDesc": "لوريم إيبسوم دولور سيت أميت كونسيكتيتور. تريستيك أميت سيد ماسا نيب لكتوس نيتوس إن. أليكيت دونك موربي كونفاليس بريتيوم. توربيس تمبوس فارترا.",
+  "servicesDesc": "لوريم إيبسوم دولور سيت أميت كونسيكتيتور. تريستيك أميت سيد ماسا نيب لكتوس نيتوس إن. أليكيت دونك موربي كونفاليس بريتيوم. توربيس تمبوس فارترا."
 }
